--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -279,7 +279,7 @@ permalink: /banzo/
 					</div>
 					<div class="row">
 						<div class="col">
-							<h6>Choose Your Style</h6>
+							<h6 class="cater-title">Choose Your Style</h6>
 							<div class="row">
 								<div class="col">
 									<div class="menu-item">
@@ -302,8 +302,49 @@ permalink: /banzo/
 							</div>
 						</div>
 					</div>
-				</div>
-			</div>
+					<div class="row">
+						<div class="col">
+							<h6 class="cater-title">All Bars Include</h6>
+							<div class="menu-item">
+								<p class="menu-title">Falafel</p>
+								<p class="menu-title">Chicken</p>
+								<p class="menu-title">Homemade Hummus</p>
+								<p class="menu-title">Chopped Salad</p>
+								<p class="menu-title">Pita Bread</p>
+							</div>
+						</div>
+						<div class="col">
+							<h6 class="cater-title">Add-Ons</h6>
+							<p class="menu-descript">99¢ a person</p>
+							<div class="menu-item">
+								<p class="menu-title">Pita Bread</p>
+								<p class="menu-title">Majadra Rice</p>
+								<p class="menu-title">Mixed Greens</p>
+								<p class="menu-title">Hand-Cut Chips</p>
+								<p class="menu-title">Pickles</p>
+							</div>
+						</div>
+						<div class="col">
+							<h6 class="cater-title">Specialty Items</h6>
+							<p class="menu-descript">Call for prices and availability</p>
+							<div class="menu-item">
+								<p class="menu-title">Beep Brisket*</p>
+								<p class="menu-title">Roasted Leg of Lamb*</p>
+								<p class="menu-title">Roasted Beat Salad</p>
+								<p class="menu-title">Morroccan Carrots</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col">
+							<h5 class="menu-headline">Party Trays</h5>
+							<p>Mix and match to create your perfect menu for an event of any size. 48 ounce size recommended for 12-15 guests. 80 ounce size recommended for 20-25 guests.</p>
+						</div>
+					</div>
+
+				</div><!-- end Banzo menu -->
+			</div><!-- end Banzo catering -->
 
 			<p>Tell us about your event! We'll take care of the rest.</p>
 			<p>*No requests are confirmed until approval is received from our catering team. Please allow up to 2 business days for a response from our catering team. DO NOT submit duplicate requests via email or phone. If your event requires immediate confirmation, please skip this form and call (608) 441-2002. Thank you!</p>
