--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -343,36 +343,43 @@ permalink: /banzo/
 						</div>
 					</div>
 					<div class="d-flex flex-row">
-						<div class="col-4">
-							<p class="menu-title">Spreads</p>
-							<p>Hummus &amp; Pita</p>
-							<p>Babaganush &amp; Pita</p>
+						<div class="menu-item p-2">
+							<div class="col-4">
+								<p class="menu-title">Spreads</p>
+								<p>Hummus &amp; Pita</p>
+								<p>Babaganush &amp; Pita</p>
+							</div>
+							<div class="p-2">
+								<p class="menu-title">48oz</p>
+								<p>$30</p>
+								<p>$30</p>
+							</div>
+							<div class="p-2">
+								<p class="menu-title">80oz</p>
+								<p>$45</p>
+								<p>$45</p>
+							</div>
 						</div>
-						<div class="p-2">
-							<p class="menu-title">48oz</p>
-							<p>$30</p>
-							<p>$30</p>
-						</div>
-						<div class="p-2">
-							<p class="menu-title">80oz</p>
-							<p>$45</p>
-							<p>$45</p>
+						<div class="menu-item p-2">
+							<div class="col-4">
+								<p class="menu-title">Signature Salads</p>
+								<p>Chopped Salad</p>
+								<p>Couscous Tabouli</p>
+							</div>
+							<div class="p-2">
+								<p class="menu-title">48oz</p>
+								<p>$24</p>
+								<p>$24</p>
+							</div>
+							<div class="p-2">
+								<p class="menu-title">80oz</p>
+								<p>$40</p>
+								<p>$40</p>
+							</div>
 						</div>
 					</div>
 					<div class="d-flex flex-row">
-						<div class="col-4">
-							<p class="menu-title">Signature Salads</p>
-							<p>Chopped Salad</p>
-							<p>Couscous Tabouli</p>
-						</div>
-						<div class="p-2">
-							<p>$24</p>
-							<p>$24</p>
-						</div>
-						<div class="p-2">
-							<p>$40</p>
-							<p>$40</p>
-						</div>
+
 					</div>
 
 				</div><!-- end Banzo menu -->
