--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -342,44 +342,37 @@ permalink: /banzo/
 							<p>Mix and match to create your perfect menu for an event of any size. 48 ounce size recommended for 12-15 guests. 80 ounce size recommended for 20-25 guests.</p>
 						</div>
 					</div>
-					<div class="d-flex flex-row">
-						<div class="menu-item p-2">
-							<div class="col-4">
-								<p class="menu-title">Spreads</p>
-								<p>Hummus &amp; Pita</p>
-								<p>Babaganush &amp; Pita</p>
-							</div>
-							<div class="p-2">
-								<p class="menu-title">48oz</p>
-								<p>$30</p>
-								<p>$30</p>
-							</div>
-							<div class="p-2">
-								<p class="menu-title">80oz</p>
-								<p>$45</p>
-								<p>$45</p>
-							</div>
+					<div class="row">
+						<div class="col-4 menu-item">
+							<p class="menu-title">Spreads</p>
+							<p>Hummus &amp; Pita</p>
+							<p>Babaganush &amp; Pita</p>
 						</div>
-						<div class="menu-item p-2">
-							<div class="col-4">
-								<p class="menu-title">Signature Salads</p>
-								<p>Chopped Salad</p>
-								<p>Couscous Tabouli</p>
-							</div>
-							<div class="p-2">
-								<p class="menu-title">48oz</p>
-								<p>$24</p>
-								<p>$24</p>
-							</div>
-							<div class="p-2">
-								<p class="menu-title">80oz</p>
-								<p>$40</p>
-								<p>$40</p>
-							</div>
+						<div class="p-2">
+							<p class="menu-title">48oz</p>
+							<p>$30</p>
+							<p>$30</p>
 						</div>
-					</div>
-					<div class="d-flex flex-row">
-
+						<div class="p-2">
+							<p class="menu-title">80oz</p>
+							<p>$45</p>
+							<p>$45</p>
+						</div>
+						<div class="col-4 menu-item">
+							<p class="menu-title">Signature Salads</p>
+							<p>Chopped Salad</p>
+							<p>Couscous Tabouli</p>
+						</div>
+						<div class="p-2">
+							<p class="menu-title">48oz</p>
+							<p>$24</p>
+							<p>$24</p>
+						</div>
+						<div class="p-2">
+							<p class="menu-title">80oz</p>
+							<p>$40</p>
+							<p>$40</p>
+						</div>
 					</div>
 
 				</div><!-- end Banzo menu -->
