--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -342,39 +342,43 @@ permalink: /banzo/
 							<p>Mix and match to create your perfect menu for an event of any size. 48 ounce size recommended for 12-15 guests. 80 ounce size recommended for 20-25 guests.</p>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-5 menu-item">
-							<div class="p-2">
-								<p class="menu-title">Spreads</p>
-								<p>Hummus &amp; Pita</p>
-								<p>Babaganush &amp; Pita</p>
-							</div>
-							<div class="p-2">
-								<p class="menu-title">48oz</p>
-								<p>$30</p>
-								<p>$30</p>
-							</div>
-							<div class="p-2">
-								<p class="menu-title">80oz</p>
-								<p>$45</p>
-								<p>$45</p>
+					<div class="row d-flex justify-content-between">
+						<div class="col-5 d-flex flex-row">
+							<div class="menu-item">
+								<div class="p-2">
+									<p class="menu-title">Spreads</p>
+									<p>Hummus &amp; Pita</p>
+									<p>Babaganush &amp; Pita</p>
+								</div>
+								<div class="p-2">
+									<p class="menu-title">48oz</p>
+									<p>$30</p>
+									<p>$30</p>
+								</div>
+								<div class="p-2">
+									<p class="menu-title">80oz</p>
+									<p>$45</p>
+									<p>$45</p>
+								</div>
 							</div>
 						</div>
-						<div class="col-5 menu-item">
-							<div class="p-2">
-								<p class="menu-title">Signature Salads</p>
-								<p>Chopped Salad</p>
-								<p>Couscous Tabouli</p>
-							</div>
-							<div class="p-2">
-								<p class="menu-title">48oz</p>
-								<p>$24</p>
-								<p>$24</p>
-							</div>
-							<div class="p-2">
-								<p class="menu-title">80oz</p>
-								<p>$40</p>
-								<p>$40</p>
+						<div class="col-5 d-flex flex-row">
+							<div class="menu-item">
+								<div class="p-2">
+									<p class="menu-title">Signature Salads</p>
+									<p>Chopped Salad</p>
+									<p>Couscous Tabouli</p>
+								</div>
+								<div class="p-2">
+									<p class="menu-title">48oz</p>
+									<p>$24</p>
+									<p>$24</p>
+								</div>
+								<div class="p-2">
+									<p class="menu-title">80oz</p>
+									<p>$40</p>
+									<p>$40</p>
+								</div>
 							</div>
 						</div>
 					</div>
