--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -281,19 +281,19 @@ permalink: /banzo/
 						<div class="col">
 							<h6 class="cater-title">Choose Your Style</h6>
 							<div class="row">
-								<div class="col">
+								<div class="col col-sm-4">
 									<div class="menu-item">
 										<p class="menu-title">Sandwitch</p>
 										<p class="menu-descript">Comes with full pita per person plus dill pickles and sauces. (Tahini, Chili Garlic, Yogurt Dill)</p>
 									</div>
 								</div>
-								<div class="col">
+								<div class="col col-sm-4">
 									<div class="menu-item">
 										<p class="menu-title">Platter</p>
 										<p class="menu-descript">Comes with 1/2 a pita per person plus majadra rice and sauces. (Tahini, Chili Garlic, Yogurt Dill)</p>
 									</div>
 								</div>
-								<div class="col">
+								<div class="col col-sm-4">
 									<div class="menu-item">
 										<p class="menu-title">Salad</p>
 										<p class="menu-descript">Comes with 1/2 a pita per person plus mixed greens, kalamata olives and lemon agave salad dressing.</p>
@@ -303,7 +303,7 @@ permalink: /banzo/
 						</div>
 					</div>
 					<div class="row">
-						<div class="col">
+						<div class="col col-sm-4">
 							<h6 class="cater-title">All Bars Include</h6>
 							<div class="menu-item">
 								<p class="menu-title">Falafel</p>
@@ -313,7 +313,7 @@ permalink: /banzo/
 								<p class="menu-title">Pita Bread</p>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col col-sm-4">
 							<h6 class="cater-title">Add-Ons</h6>
 							<p class="menu-descript">99¢ a person</p>
 							<div class="menu-item">
@@ -324,7 +324,7 @@ permalink: /banzo/
 								<p class="menu-title">Pickles</p>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col col-sm-4">
 							<h6 class="cater-title">Specialty Items</h6>
 							<p class="menu-descript">Call for prices and availability</p>
 							<div class="menu-item">
@@ -344,7 +344,7 @@ permalink: /banzo/
 					</div>
 					<div class="row d-flex justify-content-between">
 						<div class="col-5 d-flex flex-row">
-							<div class="menu-item">
+							<div class="menu-item d-flex flex-row">
 								<div class="p-2">
 									<p class="menu-title">Spreads</p>
 									<p>Hummus &amp; Pita</p>
@@ -363,7 +363,7 @@ permalink: /banzo/
 							</div>
 						</div>
 						<div class="col-5 d-flex flex-row">
-							<div class="menu-item">
+							<div class="menu-item d-flex flex-row">
 								<div class="p-2">
 									<p class="menu-title">Signature Salads</p>
 									<p>Chopped Salad</p>
@@ -379,6 +379,27 @@ permalink: /banzo/
 									<p>$40</p>
 									<p>$40</p>
 								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col">
+							<div class="menu-item">
+								<p class="menu-title">Falafel a la Carte</p>
+								<p class="menu-descript">5 falafel balls served with tahini sauce. $3.95</p>
+							</div>
+						</div>
+						<div class="col">
+							<div class="menu-item">
+								<p class="menu-title">Sample Platter</p>
+								<p class="menu-descript">Includes hummus, chopped salad, babaganush, couscouse tabouli, and pita bread. Serves up to 12 guests. $28</p>
+							</div>
+						</div>
+						<div class="col">
+							<div class="menu-item">
+								<p class="menu-title">Dessert</p>
+								<p class="menu-descript">Baklava (original or vegan) Other specialties on request</p>
 							</div>
 						</div>
 					</div>
