--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -326,7 +326,8 @@ permalink: /banzo/
 						</div>
 						<div class="col-12 col-sm-4">
 							<h6 class="cater-title">Specialty Items</h6>
-							<p class="menu-descript">Call for prices and availability</p>
+							<p class="menu-descript">Call for prices and availability<br>
+							*May need additional notice.</p>
 							<div class="menu-item">
 								<p class="menu-title">Beep Brisket*</p>
 								<p class="menu-title">Roasted Leg of Lamb*</p>
@@ -404,6 +405,12 @@ permalink: /banzo/
 						</div>
 					</div>
 
+					<div class="row">
+						<div class="col">
+							<p>All catering orders must be placed 48 hours in advance. Chaffing equipment available for rent upon request</p>
+						</div>
+					</div>
+
 				</div><!-- end Banzo menu -->
 			</div><!-- end Banzo catering -->
 
@@ -415,7 +422,7 @@ permalink: /banzo/
 					<form role="form" action="https://formspree.io/catering.banzo@gmail.com" method="POST">
 						<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
 						<div class="row">
-							<div class="col">
+							<div class="col-12 col-sm-6">
 								<div class="form-group">
 									<label for="inputName">Your Name</label>
 									<input type="text" name="name" class="form-control" id="inputName">
@@ -429,7 +436,7 @@ permalink: /banzo/
 				    			<input type="text" name="date" class="form-control" id="inputDate">
 								</div>
 							</div>
-							<div class="col">
+							<div class="col-12 col-sm-6">
 								<div class="form-group">
 									<label for="inputTime">Event time</label>
 									<input type="text" name="time" class="form-control" id="inputTime">
