--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -303,7 +303,7 @@ permalink: /banzo/
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-12 col-sm-4">
+						<div class="col-sm-12 col-md-6 col-lg-4">
 							<h6 class="cater-title">All Bars Include</h6>
 							<div class="menu-item">
 								<p class="menu-title">Falafel</p>
@@ -313,7 +313,7 @@ permalink: /banzo/
 								<p class="menu-title">Pita Bread</p>
 							</div>
 						</div>
-						<div class="col-12 col-sm-4">
+						<div class="col-sm-12 col-md-6 col-lg-4">
 							<h6 class="cater-title">Add-Ons</h6>
 							<p class="menu-descript">99¢ a person</p>
 							<div class="menu-item">
@@ -324,7 +324,7 @@ permalink: /banzo/
 								<p class="menu-title">Pickles</p>
 							</div>
 						</div>
-						<div class="col-12 col-sm-4">
+						<div class="col-md-12 col-lg-4">
 							<h6 class="cater-title">Specialty Items</h6>
 							<p class="menu-descript">Call for prices and availability<br>
 							*May need additional notice.</p>
@@ -343,8 +343,8 @@ permalink: /banzo/
 							<p>Mix and match to create your perfect menu for an event of any size. 48 ounce size recommended for 12-15 guests. 80 ounce size recommended for 20-25 guests.</p>
 						</div>
 					</div>
-					<div class="row d-flex justify-content-between">
-						<div class="col-12 col-sm-5 d-flex flex-row">
+					<div class="row d-flex justify-content-around">
+						<div class="col-md-12 col-lg-5 d-flex flex-row">
 							<div class="menu-item d-flex flex-row">
 								<div class="p-2">
 									<p class="menu-title">Spreads</p>
@@ -363,7 +363,7 @@ permalink: /banzo/
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-sm-5 d-flex flex-row">
+						<div class="col-md-12 col-lg-5 d-flex flex-row">
 							<div class="menu-item d-flex flex-row">
 								<div class="p-2">
 									<p class="menu-title">Signature Salads</p>
@@ -407,7 +407,7 @@ permalink: /banzo/
 
 					<div class="row">
 						<div class="col">
-							<p>All catering orders must be placed 48 hours in advance. Chaffing equipment available for rent upon request</p>
+							<p class="subtext">All catering orders must be placed 48 hours in advance. Chaffing equipment available for rent upon request</p>
 						</div>
 					</div>
 
