--- a/index.html
+++ b/index.html
@@ -311,8 +311,152 @@ permalink: /
 		<div class="clearfix"></div>
 		<div id="catering" class="col-md-8 white">
 			<h2 class="title">Catering</h2>
-			<p><a href="/pdf/banzocateringmenu.pdf" target="_blank"><button type="button" class="btn btn-primary">CATERING MENU.PDF</button></a></p>
-			
+			<p><a href="javascript:void(0)"><button type="button" class="btn btn-primary hp-cater">VIEW CATERING MENU</button></a></p>
+			<div class="banzo-catering">
+				<div id="banzo-menu">
+					<div class="row">
+						<div class="col">
+							<h5 class="menu-headline">Banzo Bars</h5>
+							<p>Our freshly prepared ingredients provide a little of everything for everyone. Each Banzo Bar comes ready as a self-serve buffet. $9.95 per person with a 15 person minimum.</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col">
+							<h6 class="cater-title">Choose Your Style</h6>
+							<div class="row">
+								<div class="col-12 col-sm-4">
+									<div class="menu-item">
+										<p class="menu-title">Sandwitch</p>
+										<p class="menu-descript">Comes with full pita per person plus dill pickles and sauces. (Tahini, Chili Garlic, Yogurt Dill)</p>
+									</div>
+								</div>
+								<div class="col-12 col-sm-4">
+									<div class="menu-item">
+										<p class="menu-title">Platter</p>
+										<p class="menu-descript">Comes with 1/2 a pita per person plus majadra rice and sauces. (Tahini, Chili Garlic, Yogurt Dill)</p>
+									</div>
+								</div>
+								<div class="col-12 col-sm-4">
+									<div class="menu-item">
+										<p class="menu-title">Salad</p>
+										<p class="menu-descript">Comes with 1/2 a pita per person plus mixed greens, kalamata olives and lemon agave salad dressing.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-12 col-md-6 col-lg-4">
+							<h6 class="cater-title">All Bars Include</h6>
+							<div class="menu-item">
+								<p class="menu-title">Falafel</p>
+								<p class="menu-title">Chicken</p>
+								<p class="menu-title">Homemade Hummus</p>
+								<p class="menu-title">Chopped Salad</p>
+								<p class="menu-title">Pita Bread</p>
+							</div>
+						</div>
+						<div class="col-sm-12 col-md-6 col-lg-4">
+							<h6 class="cater-title">Add-Ons</h6>
+							<p class="menu-descript">99¢ a person</p>
+							<div class="menu-item">
+								<p class="menu-title">Pita Bread</p>
+								<p class="menu-title">Majadra Rice</p>
+								<p class="menu-title">Mixed Greens</p>
+								<p class="menu-title">Hand-Cut Chips</p>
+								<p class="menu-title">Pickles</p>
+							</div>
+						</div>
+						<div class="col-md-12 col-lg-4">
+							<h6 class="cater-title">Specialty Items</h6>
+							<p class="menu-descript">Call for prices and availability<br>
+							*May need additional notice.</p>
+							<div class="menu-item">
+								<p class="menu-title">Beep Brisket*</p>
+								<p class="menu-title">Roasted Leg of Lamb*</p>
+								<p class="menu-title">Roasted Beat Salad</p>
+								<p class="menu-title">Morroccan Carrots</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col">
+							<h5 class="menu-headline">Party Trays</h5>
+							<p>Mix and match to create your perfect menu for an event of any size. 48 ounce size recommended for 12-15 guests. 80 ounce size recommended for 20-25 guests.</p>
+						</div>
+					</div>
+					<div class="row d-flex justify-content-around">
+						<div class="col-md-12 col-lg-5 d-flex flex-row">
+							<div class="menu-item d-flex flex-row">
+								<div class="p-2">
+									<p class="menu-title">Spreads</p>
+									<p>Hummus &amp; Pita</p>
+									<p>Babaganush &amp; Pita</p>
+								</div>
+								<div class="p-2">
+									<p class="menu-title">48oz</p>
+									<p>$30</p>
+									<p>$30</p>
+								</div>
+								<div class="p-2">
+									<p class="menu-title">80oz</p>
+									<p>$45</p>
+									<p>$45</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-12 col-lg-5 d-flex flex-row">
+							<div class="menu-item d-flex flex-row">
+								<div class="p-2">
+									<p class="menu-title">Signature Salads</p>
+									<p>Chopped Salad</p>
+									<p>Couscous Tabouli</p>
+								</div>
+								<div class="p-2">
+									<p class="menu-title">48oz</p>
+									<p>$24</p>
+									<p>$24</p>
+								</div>
+								<div class="p-2">
+									<p class="menu-title">80oz</p>
+									<p>$40</p>
+									<p>$40</p>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-12 col-sm-4">
+							<div class="menu-item">
+								<p class="menu-title">Falafel a la Carte</p>
+								<p class="menu-descript">5 falafel balls served with tahini sauce. $3.95</p>
+							</div>
+						</div>
+						<div class="col-12 col-sm-4">
+							<div class="menu-item">
+								<p class="menu-title">Sample Platter</p>
+								<p class="menu-descript">Includes hummus, chopped salad, babaganush, couscouse tabouli, and pita bread. Serves up to 12 guests. $28</p>
+							</div>
+						</div>
+						<div class="col-12 col-sm-4">
+							<div class="menu-item">
+								<p class="menu-title">Dessert</p>
+								<p class="menu-descript">Baklava (original or vegan) Other specialties on request</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col">
+							<p class="subtext">All catering orders must be placed 48 hours in advance. Chaffing equipment available for rent upon request</p>
+						</div>
+					</div>
+
+				</div><!-- end Banzo menu -->
+			</div><!-- end Banzo catering -->
+
 			<p>Tell us about your event! We'll take care of the rest.</p>
 			<p>*No requests are confirmed until approval is received from our catering team. Please allow up to 2 business days for a response from our catering team. DO NOT submit duplicate requests via email or phone. If your event requires immediate confirmation, please skip this form and call (608) 441-2002. Thank you!</p>
 
