--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ permalink: /
 							<p>Mix and match to create your perfect menu for an event of any size. 48 ounce size recommended for 12-15 guests. 80 ounce size recommended for 20-25 guests.</p>
 						</div>
 					</div>
-					<div class="row d-flex justify-content-around">
+					<div class="row d-flex justify-content-between">
 						<div class="col-md-12 col-lg-5 d-flex flex-row">
 							<div class="menu-item d-flex flex-row">
 								<div class="p-2">
