--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ permalink: /
 					<form role="form" action="https://formspree.io/catering.banzo@gmail.com" method="POST">
 						<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
 						<div class="row">
-							<div class="col">
+							<div class="col-12 col-sm-6">
 								<div class="form-group">
 									<label for="inputName">Your Name</label>
 									<input type="text" name="name" class="form-control" id="inputName">
@@ -479,7 +479,7 @@ permalink: /
 				    			<input type="text" name="date" class="form-control" id="inputDate">
 								</div>
 							</div>
-							<div class="col">
+							<div class="col-12 col-sm-6">
 								<div class="form-group">
 									<label for="inputTime">Event time</label>
 									<input type="text" name="time" class="form-control" id="inputTime">
