--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ permalink: /
 						<div class="menu-item">
 							<p class="menu-title">Lentil soup</p>
 						</div>
-						<div class="menu-item">
+						<div id="catering" class="menu-item">
 							<p class="menu-title">Soup of the Day</p>
 						</div>
 					</div>
@@ -309,7 +309,7 @@ permalink: /
 			</div><!--END #BANZO MENU-->
 		</div>
 		<div class="clearfix"></div>
-		<div id="catering" class="col-md-8 white">
+		<div class="col-md-8 white">
 			<h2 class="title">Catering</h2>
 			<p><a href="javascript:void(0)"><button type="button" class="btn btn-primary hp-cater">VIEW CATERING MENU</button></a></p>
 			<div class="banzo-catering">
