--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ permalink: /
 							<div class="row">
 								<div class="col-12 col-sm-4">
 									<div class="menu-item">
-										<p class="menu-title">Sandwitch</p>
+										<p class="menu-title">Sandwich</p>
 										<p class="menu-descript">Comes with full pita per person plus dill pickles and sauces. (Tahini, Chili Garlic, Yogurt Dill)</p>
 									</div>
 								</div>
@@ -372,9 +372,9 @@ permalink: /
 							<p class="menu-descript">Call for prices and availability<br>
 							*May need additional notice.</p>
 							<div class="menu-item">
-								<p class="menu-title">Beep Brisket*</p>
+								<p class="menu-title">Beef Brisket*</p>
 								<p class="menu-title">Roasted Leg of Lamb*</p>
-								<p class="menu-title">Roasted Beat Salad</p>
+								<p class="menu-title">Roasted Beet Salad</p>
 								<p class="menu-title">Morroccan Carrots</p>
 							</div>
 						</div>
