--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -70,11 +70,10 @@ permalink: /banzo/
 
 	<div id="menu" class="row pad6vw d-flex justify-content-center">
 		<div class="col-md-8">
-			<h2 class="title menu">Restaurant Menu</h2>
+			<!-- <h2 class="title menu">Restaurant Menu</h2> -->
 
-			<div id="banzo-menu">
+			<!-- <div id="banzo-menu">
 
-				<!--WHAT DO YOU WANT-->
 				<div class="row">
 					<div class="col">
 						<h5 class="menu-headline">1. What do you want?</h5>
@@ -125,7 +124,6 @@ permalink: /banzo/
 					</div>
 				</div>
 
-				<!--HOW DO YOU WANT IT?-->
 				<div class="row">
 					<div class="col">
 						<h5 class="menu-headline">2. How do you want it?</h5>
@@ -152,7 +150,6 @@ permalink: /banzo/
 					</div>
 				</div>
 
-				<!--LUNCH SPECIALS-->
 				<div class="row">
 					<div class="col">
 						<h5 class="menu-headline">Lunch Specials</h5>
@@ -164,7 +161,6 @@ permalink: /banzo/
 					</div>
 				</div>
 
-				<!--SIDES-->
 				<div class="row">
 					<div class="col">
 						<h5 class="menu-headline">Sides</h5>
@@ -222,7 +218,6 @@ permalink: /banzo/
 					</div>
 				</div>
 
-				<!--DRINKS-->
 				<div class="row">
 					<div class="col">
 						<h5 class="menu-headline">Drinks</h5>
@@ -249,7 +244,6 @@ permalink: /banzo/
 					</div>
 				</div>
 
-				<!--SOUPS-->
 				<div class="row">
 					<div class="col">
 						<h5 class="menu-headline">Soup</h5>
@@ -262,8 +256,11 @@ permalink: /banzo/
 							<p class="menu-title">Soup of the Day</p>
 						</div>
 					</div>
-				</div><!--END row-->
-			</div><!--END #BANZO MENU-->
+				</div>
+			</div> -->
+
+			<!--END #BANZO MENU-->
+
 		</div>
 		<div class="clearfix"></div>
 		<div id="catering" class="col-md-8">
