--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ permalink: /
 		</div>
 	</div>
 
-	<div id="menu" class="row pad6vw d-flex justify-content-center blurp">
+	<div id="catering" class="row pad6vw d-flex justify-content-center blurp">
 		<!-- <div class="col-md-8 white">
 			<h2 class="title menu">Restaurant Menu</h2>
 
