--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@ permalink: /
 		<div class="col d-flex justify-content-center">
 			<div class="hp-pages">
 				<li>
-					<a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank"><img src="/images/order-online.png" width="100%" style="max-width: 210px;"></a>
+					<a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank"><img alt="Order Banzo Online" src="/images/order-online.png" width="100%" style="max-width: 210px;"></a>
 				</li>
 			</div>
 		</div>
 
 		<a class="feature-arrow-down scroll" href="#twitter">
-			<i class="fas fa-arrow-circle-down"></i>
+			<span class="sr-only">Scroll down for more</span><i class="fas fa-arrow-circle-down"></i>
 		</a>
 	</div>
 
@@ -66,13 +66,13 @@ permalink: /
 							</a>
 							<p><i class="fas fa-phone"></i> <tel>(608) 441-2002</tel></p>
 							<a href="https://www.facebook.com/banzomadison/" target="_blank">
-								<i class="fab fa-facebook-f"></i>
+								<span class="sr-only">Facebook</span><i class="fab fa-facebook-f"></i>
 							</a>
 							<a href="https://twitter.com/banzomadison/" target="_blank">
-								<i class="fab fa-twitter"></i>
+								<span class="sr-only">Twitter</span><i class="fab fa-twitter"></i>
 							</a>
 							<a href="https://www.instagram.com/banzomadison/" target="_blank">
-								<i class="fab fa-instagram"></i>
+								<span class="sr-only">Instagram</span><i class="fab fa-instagram"></i>
 							</a>
 						</div>
 					</div>
@@ -528,7 +528,7 @@ permalink: /
 				.map-overlay { padding-bottom: 115%;}
 			}
 			</style>
-			<div class='embed-container'><iframe src="https://www.google.com/maps/d/embed?mid=1pgxOJlWKa02YGRAdfpftCxm_uj8&z=13" width="640" height="480"></iframe></div>
+			<div class='embed-container'><iframe title="Delivery Zone" src="https://www.google.com/maps/d/embed?mid=1pgxOJlWKa02YGRAdfpftCxm_uj8&z=13" width="640" height="480"></iframe></div>
 		</div>
 	</div>
 
