--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ permalink: /
 		</div>
 	</div>
 
-	<div id="catering" class="row pad6vw d-flex justify-content-center blurp">
-		<!-- <div class="col-md-8 white">
+	<div id="menu" class="row pad6vw d-flex justify-content-center blurp">
+		<div class="col-md-8 white">
 			<h2 class="title menu">Restaurant Menu</h2>
 
 			<div id="banzo-menu">
@@ -126,44 +126,44 @@ permalink: /
 						<p class="menu-ooo"><vegan><span>v</span></vegan> = vegan</p>
 
 						<div class="menu-item">
-							<p class="menu-title">The Banzo &#8211; $8.50 <vegan><span>v</span></vegan></p>
+							<p class="menu-title">The Banzo &#8211; $9.50 <vegan><span>v</span></vegan></p>
 							<p class="menu-descript">Classic falafel. Garbanzo beans ground with veggies, herbs and spices.</p>
 						</div>
 
 						<div class="menu-item">
-							<p class="menu-title">The Chick &#8211; $9.50</p>
+							<p class="menu-title">The Chick &#8211; $11.00</p>
 							<p class="menu-descript">Marinated chicken tenderloin in our house marinade.</p>
 						</div>
 
 						<div class="menu-item">
-							<p class="menu-title">The Kebab &#8211; $9.95</p>
+							<p class="menu-title">The Kebab &#8211; $11.00</p>
 							<p class="menu-descript">Traditional hand-made ground beef kebab.</p>
 						</div>
 
 						<div class="menu-item">
-							<p class="menu-title">The Harvest &#8211; $8.75 <vegan><span>v</span></vegan></p>
+							<p class="menu-title">The Harvest &#8211; $9.50 <vegan><span>v</span></vegan></p>
 							<p class="menu-descript">2 falafel balls with slices of seared eggplant.</p>
 						</div>
 
 						<div class="menu-item">
-							<p class="menu-title">The Schnitzel &#8211; $9.95</p>
+							<p class="menu-title">The Schnitzel &#8211; $11.00</p>
 							<p class="menu-descript">Breaded, fried chicken breast with our house seasoning.</p>
 						</div>
 
 						<div class="menu-item">
-							<p class="menu-title">The F-Bomb &#8211; $9.25</p>
+							<p class="menu-title">The F-Bomb &#8211; $11.00</p>
 							<p class="menu-descript">2 falafel balls plus choice of marinated chicken or beef kebabs.</p>
 						</div>
 						<div class="menu-item">
-							<p class="menu-title">The Batata &#8211; $9.00 <vegan><span>v</span></vegan></p>
+							<p class="menu-title">The Batata &#8211; $9.50 <vegan><span>v</span></vegan></p>
 							<p class="menu-descript">Fresh ground sweet potato falafel.</p>
 						</div>
 						<div class="menu-item">
-							<p class="menu-title">The Lamb &#8211; $12.00</p>
+							<p class="menu-title">The Lamb &#8211; $13.50</p>
 							<p class="menu-descript">Locally sourced lamb.  Preparation changes frequently.</p>
 						</div>
 						<div class="menu-item">
-							<p class="menu-title">The Shawarma &#8211; $9.50</p>
+							<p class="menu-title">The Shawarma &#8211; $11.00</p>
 							<p class="menu-descript">Slow roasted seasoned chicken thighs.</p>
 						</div>
 					</div>
@@ -184,12 +184,12 @@ permalink: /
 						</div>
 
 						<div class="menu-item">
-							<p class="menu-title">Hummus Plate - (add $1.75)</p>
+							<p class="menu-title">Hummus Plate - (add $2.00)</p>
 							<p class="menu-descript">Topped over our fresh homemade hummus with tahini, parsley, olive oil, chickpeas &amp; pita bread.</p>
 						</div>
 
 						<div class="menu-item">
-							<p class="menu-title">Salad - (add $2.25)</p>
+							<p class="menu-title">Salad - (add $2.50)</p>
 							<p class="menu-descript">Over a bed of mixed greens topped with chopped salad, olives, chickpeas, and our homemade lemon-agave dressing. Feta cheese optional.</p>
 						</div>
 					</div>
@@ -303,7 +303,7 @@ permalink: /
 					</div>
 				</div>
 			</div>
-		</div> -->
+		</div>
 
 		<div class="clearfix"></div>
 		<div class="col-md-8 white">
