--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@ title: "Home"
 permalink: /
 ---
 
+<div class="container-fluid bg-warning covid19">
+  <div class="container">
+    <div class="row p-3">
+    	<h2>We are <u>OPEN</u> for contactless delivery and pickup: Tues - Sun 11am - 7pm</h2>
+    </div>
+  </div>
+</div>
+
 <div class="container-fluid">
 
 
