--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ permalink: /
 	</div>
 
 	<div id="menu" class="row pad6vw d-flex justify-content-center blurp">
-		<div class="col-md-8 white">
+		<!-- <div class="col-md-8 white">
 			<h2 class="title menu">Restaurant Menu</h2>
 
 			<div id="banzo-menu">
@@ -313,7 +313,7 @@ permalink: /
 			</div>
 		</div>
 
-		<div class="clearfix"></div>
+		<div class="clearfix"></div> -->
 		<div class="col-md-8 white">
 			<h2 class="title">Catering</h2>
 			<p><a href="javascript:void(0)"><button type="button" class="btn btn-primary hp-cater">VIEW CATERING MENU</button></a></p>
