delivery map issues

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ permalink: /
 		</div>
 	</div>
 
-	<div id="map" class="row">
+	<!-- <div id="map" class="row">
 		<div class="col no-pad">
 			<div class="map-overlay" onClick="style.pointerEvents='none'"></div>
 			<style>
@@ -535,6 +535,6 @@ permalink: /
 			</style>
 			<div class='embed-container'><iframe title="Delivery Zone" src="https://www.google.com/maps/d/embed?mid=1pgxOJlWKa02YGRAdfpftCxm_uj8&z=13" width="640" height="480"></iframe></div>
 		</div>
-	</div>
+	</div> -->
 
 </div><!-- end container-fluid -->
