--- a/index.html
+++ b/index.html
@@ -20,10 +20,18 @@ permalink: /
 			<div class="hp-pages">
 				<ul>
 					<li>
-						<a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank"><img alt="Order from Restaurant" src="/images/order-restaurant.png" width="100%" style="max-width: 210px;"></a>
+						<a class="order" href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank">
+              <img alt="Order from Restaurant" src="/images/order.png" width="100%" style="max-width: 210px;">
+              <h2>Order from Restaurant</h2>
+              <p>Tue-Sun 11am - 7pm</p>
+            </a>
 					</li>
 					<li>
-						<a href="https://www.toasttab.com/banzo-food-cart-2105-sherman-ave/v3" target="_blank"><img alt="Order from Food Cart" src="/images/order-foodcart.png" width="100%" style="max-width: 210px;"></a>
+						<a class="order" href="https://www.toasttab.com/banzo-food-cart-2105-sherman-ave/v3" target="_blank">
+              <img alt="Order from Food Cart" src="/images/order.png" width="100%" style="max-width: 210px;">
+              <h2>Order from Food Cart</h2>
+              <p>Mon-Fri 11am - 2pm</p>
+            </a>
 					</li>
 				</ul>
 			</div>
