updated hours and layout

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ permalink: /
               <img class="default-img" alt="Order from Food Cart" src="/images/order.png" width="100%" style="max-width: 210px;">
               <img class="hover-img" alt="Order from Food Cart" src="/images/order-foodcart.png" width="100%" style="max-width: 210px;">
               <h2>Order from Food Cart</h2>
-              <p>Mon-Fri 11am - 2pm</p>
+              <p>Mon, Wed, Fri 11am - 2pm</p>
             </a>
 					</li>
 				</ul>
@@ -54,34 +54,29 @@ permalink: /
 	</div>
 
 	<div id="contact">
-		<div class="row">
-			<div class="col-md-6 col-12 pad6vw restaurant">
+		<div class="row restaurant">
+			<div class="col-lg-6 col-md-8 col-12 pad6vw">
 				<h1>Restaurant</h1>
 				<div class="p-4 white">
 					<div class="row">
-						<div class="col">
-							<h2 class="title">Order Online</h2>
-							<p>Don't get up.<br>Make an order while sitting right where you are.</p>
-							<a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank">
-								<button type="button" class="btn-primary btn mb-3">Order from Restaurant</button>
-							</a>
-							<a href="https://www.toasttab.com/banzo-food-cart-2105-sherman-ave/v3" target="_blank">
-								<button type="button" class="btn-primary btn mb-3">Order from Food Cart</button>
-							</a>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col">
-							<h2 class="title">Restaurant Hours</h2>
-							<p>Monday: Closed<br>
-								Tuesday: 11:00a &ndash; 9:00p<br>
-								Wednesday: 11:00a &ndash; 9:00p<br>
-								Thursday: 11:00a &ndash; 9:00p<br>
-								Friday: 11:00a &ndash; 9:00p<br>
-								Saturday: 11:00a &ndash; 9:00p<br>
-								Sunday: 11:00a &ndash; 9:00p
-							</p>
-						</div>
+            <div class="col=12">
+              <h2 class="title">Order Online</h2>
+  						<p>Don't get up.<br>Make an order while sitting right where you are.</p>
+            </div>
+            <div class="col-6">
+              <h3>Restaurant</h3>
+              <p>Tuesday - Sunday 11am - 7pm</p>
+              <a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank">
+                <button type="button" class="btn-primary btn mb-3">Order from Restaurant</button>
+              </a>
+            </div>
+            <div class="col-6">
+              <h3>Food Cart</h3>
+              <p>Mon, Wed, Fri 11am - 2pm</p>
+              <a href="https://www.toasttab.com/banzo-food-cart-2105-sherman-ave/v3" target="_blank">
+                <button type="button" class="btn-primary btn mb-3">Order from Food Cart</button>
+              </a>
+            </div>
 					</div>
 					<div class="row">
 						<div class="col">
@@ -104,7 +99,7 @@ permalink: /
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 col-12 pad6vw carts">
+			<!-- <div class="col-md-6 col-12 pad6vw carts">
 				<h1>Food Carts</h1>
 				<div class="p-4 white">
 					<div class="row">
@@ -133,7 +128,7 @@ permalink: /
 					<p><em>NOTE: Food cart season runs <u>April 15th - December 23rd</u>.</em></p>
 					<p><em>Individual cart schedule subject to frequent change. Check social media or call store for most up-to-date locations.</em></p>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 
