--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ permalink: /
 				<h1>Restaurant</h1>
 				<div class="p-4 white">
 					<div class="row">
-            <div class="col=12">
+            <div class="col-12">
               <h2 class="title">Order Online</h2>
   						<p>Don't get up.<br>Make an order while sitting right where you are.</p>
             </div>
