--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ permalink: /
 	<div id="contact">
 		<div class="row restaurant justify-content-center">
 			<div class="col-lg-6 col-md-8 col-12 pad6vw">
-				<h1>Restaurant</h1>
+				<!-- <h1>Restaurant</h1> -->
 				<div class="p-4 white">
 					<div class="row">
             <div class="col-12">
