--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ permalink: /
 	</div>
 
 	<div id="contact">
-		<div class="row restaurant justify-content-center">
+		<div class="row restaurant justify-content-center blurp">
 			<div class="col-lg-6 col-md-8 col-12 pad6vw">
 				<!-- <h1>Restaurant</h1> -->
 				<div class="p-4 white">
