--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@ permalink: /
 	</div>
 
 
-	<div id="about" class="row">
+	<!-- <div id="about" class="row">
 		<div class="col">
 			<div class="article">
 				<p>Hearty, clean, fresh. Our made-from-scratch menu is based on traditional Mediterranean recipes, with our own signature Banzo touch. Our focus is on high quality ingredients, which often come from local sources. Stop in for take-out, call us for delivery, or join us on our beautiful patio for lunch or dinner and a glass of craft beer or house-made sangria.</p>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<div id="contact">
 		<div class="row restaurant justify-content-center blurp">
