food cart closed

--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@ permalink: /
             </a>
 					</li>
 					<li class="text-center hp-cart">
-						<a class="order" href="https://www.toasttab.com/banzo-food-cart-2105-sherman-ave/v3" target="_blank">
-              <img class="default-img" alt="Order from Food Cart" src="/images/order.png" width="100%" style="max-width: 210px;">
-              <img class="hover-img" alt="Order from Food Cart" src="/images/order-foodcart.png" width="100%" style="max-width: 210px;">
-              <h2>Order from Food Cart</h2>
-              <p>Mon, Wed, Fri 11am - 2pm</p>
-            </a>
+            <img class="default-img" alt="Order from Food Cart" src="/images/order.png" width="100%" style="max-width: 210px;">
+            <img class="hover-img" alt="Order from Food Cart" src="/images/order-foodcart.png" width="100%" style="max-width: 210px;">
+            <h2>Food Cart Closed</h2>
+            <p>Until Spring 2021</p>
 					</li>
 				</ul>
 			</div>
@@ -71,11 +69,11 @@ permalink: /
               </a>
             </div>
             <div class="col-6">
-              <h3>Food Cart</h3>
+              <h3>Food Cart (Closed until Spring 2021)</h3>
               <p>Mon, Wed, Fri 11am - 2pm</p>
-              <a href="https://www.toasttab.com/banzo-food-cart-2105-sherman-ave/v3" target="_blank">
+              <!-- <a href="https://www.toasttab.com/banzo-food-cart-2105-sherman-ave/v3" target="_blank">
                 <button type="button" class="btn-primary btn mb-3">Order from Food Cart</button>
-              </a>
+              </a> -->
             </div>
 					</div>
 					<div class="row">
