updated catering form

--- a/index.html
+++ b/index.html
@@ -476,8 +476,7 @@ permalink: /
 
 			<div class="row">
 				<div class="col">
-					<form role="form" action="https://formspree.io/catering.banzo@gmail.com" method="POST">
-						<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
+					<form role="form" action="https://formspree.io/f/mdoyndjl" method="POST">
 						<div class="row">
 							<div class="col-12 col-sm-6">
 								<div class="form-group">
