--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@ permalink: /
             </a>
 					</li>
 					<li class="text-center hp-cart">
-            <img class="default-img" alt="Order from Food Cart" src="/images/order.png" width="100%" style="max-width: 210px;">
-            <img class="hover-img" alt="Order from Food Cart" src="/images/order-foodcart.png" width="100%" style="max-width: 210px;">
-            <h2>Food Cart Closed</h2>
-            <p>Until Spring 2021</p>
+            <a href="https://www.toasttab.com/banzo-food-cart-2105-sherman-ave/v3" target="_blank">
+              <img class="default-img" alt="Order from Food Cart" src="/images/order.png" width="100%" style="max-width: 210px;">
+              <img class="hover-img" alt="Order from Food Cart" src="/images/order-foodcart.png" width="100%" style="max-width: 210px;">
+              <h2>Food Cart</h2>
+              <p>@ Karben4</p>
+              <p>Fri 5pm - 8pm</p>
+            </a>
 					</li>
 				</ul>
 			</div>
@@ -69,11 +72,12 @@ permalink: /
               </a>
             </div>
             <div class="col-6">
-              <h3>Food Cart (Closed until Spring 2021)</h3>
-              <p>Mon, Wed, Fri 11am - 2pm</p>
-              <!-- <a href="https://www.toasttab.com/banzo-food-cart-2105-sherman-ave/v3" target="_blank">
+              <h3>Food Cart</h3>
+              <h5>@ Karben4</h5>
+              <p>Fridays 5pm - 8pm</p>
+              <a href="https://www.toasttab.com/banzo-food-cart-2105-sherman-ave/v3" target="_blank">
                 <button type="button" class="btn-primary btn mb-3">Order from Food Cart</button>
-              </a> -->
+              </a>
             </div>
 					</div>
 					<div class="row">
