--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ permalink: /
             </a>
 					</li>
 					<li class="text-center hp-cart">
-            <a href="https://www.toasttab.com/banzo-food-cart-2105-sherman-ave/v3" target="_blank">
+            <a class="order" href="https://www.toasttab.com/banzo-food-cart-2105-sherman-ave/v3" target="_blank">
               <img class="default-img" alt="Order from Food Cart" src="/images/order.png" width="100%" style="max-width: 210px;">
               <img class="hover-img" alt="Order from Food Cart" src="/images/order-foodcart.png" width="100%" style="max-width: 210px;">
               <h2>Food Cart</h2>
