--- a/index.html
+++ b/index.html
@@ -484,6 +484,7 @@ permalink: /
 						<div class="row">
 							<div class="col-12 col-sm-6">
 								<div class="form-group">
+                  <input type="text" name="_gotcha" style="display:none" />
 									<label for="inputName">Your Name</label>
 									<input type="text" name="name" class="form-control" id="inputName">
 								</div>
