food cart removal
removed links to food cart until further notice

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ permalink: /
               <p>Tue-Sun 11am - 8pm</p>
             </a>
 					</li>
-					<li class="text-center hp-cart">
+					<!-- <li class="text-center hp-cart">
             <a class="order" href="https://www.toasttab.com/banzo-food-cart-2105-sherman-ave/v3" target="_blank">
               <img class="default-img" alt="Order from Food Cart" src="/images/order.png" width="100%" style="max-width: 210px;">
               <img class="hover-img" alt="Order from Food Cart" src="/images/order-foodcart.png" width="100%" style="max-width: 210px;">
@@ -35,7 +35,7 @@ permalink: /
               <p>@ Karben4</p>
               <p>Fri 5pm - 8pm</p>
             </a>
-					</li>
+					</li> -->
 				</ul>
 			</div>
 		</div>
@@ -76,7 +76,7 @@ permalink: /
               <h5>@ Karben4</h5>
               <p>Fridays 5pm - 8pm</p>
               <a href="https://www.toasttab.com/banzo-food-cart-2105-sherman-ave/v3" target="_blank">
-                <button type="button" class="btn-primary btn mb-3">Order from Food Cart</button>
+                <button type="button" class="btn-dark btn mb-3" disabled>Temporarily Unavailable</button>
               </a>
             </div>
 					</div>
