updated catering menu items

--- a/index.html
+++ b/index.html
@@ -390,10 +390,12 @@ permalink: /
 							<p class="menu-descript">Call for prices and availability<br>
 							*May need additional notice.</p>
 							<div class="menu-item">
-								<p class="menu-title">Beef Brisket*</p>
-								<p class="menu-title">Roasted Leg of Lamb*</p>
+								<p class="menu-title">Beef Kofta</p>
 								<p class="menu-title">Roasted Beet Salad</p>
 								<p class="menu-title">Morroccan Carrots</p>
+								<p class="menu-title">Roasted Cauliflower</p>
+								<p class="menu-title">Babaganush &amp; Pita</p>
+								<p class="menu-title">Couscous Tabouli</p>
 							</div>
 						</div>
 					</div>
