--- a/index.html
+++ b/index.html
@@ -84,9 +84,6 @@ permalink: /
 						<div class="col">
 							<h2 class="title">Contact</h2>
 							<p>2105 Sherman Ave<br>Madison, WI 53704</p>
-							<a href="#map" class="scroll">
-								View map
-							</a>
 							<p><i class="fas fa-phone"></i> <tel>(608) 441-2002</tel></p>
 							<a href="https://www.facebook.com/banzomadison/" target="_blank">
 								<span class="sr-only">Facebook</span><i class="fab fa-facebook-f"></i>
@@ -135,201 +132,12 @@ permalink: /
 	</div>
 
 	<div id="menu" class="row pad6vw d-flex justify-content-center blurp">
-		<!-- <div class="col-md-8 white">
-			<h2 class="title menu">Restaurant Menu</h2>
-
-			<div id="banzo-menu">
-
-				<div class="row">
-					<div class="col">
-						<h5 class="menu-headline">1. What do you want?</h5>
-						<p class="menu-ooo">*we use cholesterol-free trans fat-free oil in our fryers.</p>
-						<p class="menu-ooo"><vegan><span>v</span></vegan> = vegan</p>
-
-						<div class="menu-item">
-							<p class="menu-title">The Banzo &#8211; $9.50 <vegan><span>v</span></vegan></p>
-							<p class="menu-descript">Classic falafel. Garbanzo beans ground with veggies, herbs and spices.</p>
-						</div>
-
-						<div class="menu-item">
-							<p class="menu-title">The Chick &#8211; $11.00</p>
-							<p class="menu-descript">Marinated chicken tenderloin in our house marinade.</p>
-						</div>
-
-						<div class="menu-item">
-							<p class="menu-title">The Kebab &#8211; $11.00</p>
-							<p class="menu-descript">Traditional hand-made ground beef kebab.</p>
-						</div>
-
-						<div class="menu-item">
-							<p class="menu-title">The Harvest &#8211; $9.50 <vegan><span>v</span></vegan></p>
-							<p class="menu-descript">2 falafel balls with slices of seared eggplant.</p>
-						</div>
-
-						<div class="menu-item">
-							<p class="menu-title">The Schnitzel &#8211; $11.00</p>
-							<p class="menu-descript">Breaded, fried chicken breast with our house seasoning.</p>
-						</div>
-
-						<div class="menu-item">
-							<p class="menu-title">The F-Bomb &#8211; $11.00</p>
-							<p class="menu-descript">2 falafel balls plus choice of marinated chicken or beef kebabs.</p>
-						</div>
-						<div class="menu-item">
-							<p class="menu-title">The Batata &#8211; $9.50 <vegan><span>v</span></vegan></p>
-							<p class="menu-descript">Fresh ground sweet potato falafel.</p>
-						</div>
-						<div class="menu-item">
-							<p class="menu-title">The Lamb &#8211; $13.50</p>
-							<p class="menu-descript">Locally sourced lamb.  Preparation changes frequently.</p>
-						</div>
-						<div class="menu-item">
-							<p class="menu-title">The Shawarma &#8211; $11.00</p>
-							<p class="menu-descript">Slow roasted seasoned chicken thighs.</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col">
-						<h5 class="menu-headline">2. How do you want it?</h5>
-
-						<div class="menu-item">
-							<p class="menu-title">Pita Sandwich</p>
-							<p class="menu-descript">Served in white or whole wheat pita filled with hummus, chopped salad, chips, pickles and tahini, yogurt or hot sauce. Packaged in our signature Banzo box.</p>
-						</div>
-
-						<div class="menu-item">
-							<p class="menu-title">Platter - (add $2.95)</p>
-							<p class="menu-descript">Served on a plate with majadra rice, hummus, chopped salad and a side of white or whole wheat pita.</p>
-						</div>
-
-						<div class="menu-item">
-							<p class="menu-title">Hummus Plate - (add $2.00)</p>
-							<p class="menu-descript">Topped over our fresh homemade hummus with tahini, parsley, olive oil, chickpeas &amp; pita bread.</p>
-						</div>
-
-						<div class="menu-item">
-							<p class="menu-title">Salad - (add $2.50)</p>
-							<p class="menu-descript">Over a bed of mixed greens topped with chopped salad, olives, chickpeas, and our homemade lemon-agave dressing. Feta cheese optional.</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col">
-						<h5 class="menu-headline">Lunch Specials</h5>
-						<p class="menu-descript">(11am &#8211; 2pm)</p>
-
-						<div class="menu-item">
-							<p class="menu-title">2 Banzo Pita Sandwiches &#8211; $17</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col">
-						<h5 class="menu-headline">Sides</h5>
-						<p class="menu-descript">(1 for $3.95 or choose 3 for $10)</p>
-
-						<div class="row">
-							<div class="col">
-								<div class="menu-item">
-									<p class="menu-title">Falafel</p>
-									<p class="menu-descript">4 crispy falafel balls served w/ tahini sauce</p>
-								</div>
-
-								<div class="menu-item">
-									<p class="menu-title">Couscous tabouli</p>
-									<p class="menu-descript">couscous, parsley, tomato, and scallions w/ lemon dressing</p>
-								</div>
-
-								<div class="menu-item">
-									<p class="menu-title">Babaganush</p>
-									<p class="menu-descript">roasted eggplant spread; served w/ pita</p>
-								</div>
-
-								<div class="menu-item">
-									<p class="menu-title">Hummus</p>
-									<p class="menu-descript">made fresh daily served w/ pita</p>
-								</div>
-
-								<div class="menu-item">
-									<p class="menu-title">Batata</p>
-									<p class="menu-descript">4 freshly fried sweet potato falafel</p>
-								</div>
-							</div>
-							<div class="col">
-								<div class="menu-item">
-									<p class="menu-title">Hand-cut fries</p>
-									<p class="menu-descript">cut from Wisconsin grown potatoes</p>
-								</div>
-
-								<div class="menu-item">
-									<p class="menu-title">Chopped Salad</p>
-									<p class="menu-descript">cucumber &amp; tomato salad w/ house-made dressing</p>
-								</div>
-
-								<div class="menu-item">
-									<p class="menu-title">Majadra Rice</p>
-									<p class="menu-descript">fragrant rice pilaf w/ caramelized onions and lentils</p>
-								</div>
-
-								<div class="menu-item">
-									<p class="menu-title">Fried Cauliflower</p>
-									<p class="menu-descript">served with herbed tahini</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col">
-						<h5 class="menu-headline">Drinks</h5>
-
-						<div class="menu-item">
-							<p class="menu-title">Reed's ginger beer, Sprecher cola, Gray's root beer, Izze, San pellegrino, Boxed water &#8211; $1.95</p>
-						</div>
-
-						<div class="menu-item">
-							<p class="menu-title">Home-brewed Iced Tea &#8211; $1.95</p>
-						</div>
-
-						<div class="menu-item">
-							<p class="menu-title">Nessalla Kombucha &#8211; $3.95</p>
-						</div>
-
-						<div class="menu-item">
-							<p class="menu-title">Nantucket Nectars &#8211; $2.25</p>
-						</div>
-
-						<div class="menu-item">
-							<p class="menu-title">LaCroix Sparkling Water &#8211; $1.75</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col">
-						<h5 class="menu-headline">Soup</h5>
-						<p class="menu-descript"><strong>Cup</strong> - $2.95 <strong>Bowl</strong> - $4.95 (Served w/ pita chips)</p>
-
-						<div class="menu-item">
-							<p class="menu-title">Lentil soup</p>
-						</div>
-						<div id="catering" class="menu-item">
-							<p class="menu-title">Soup of the Day</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="clearfix"></div> -->
+	<!-- restaurant menu code goes here -->
 		<div class="col-md-8 white">
 			<h2 class="title">Catering</h2>
-			<p><a href="javascript:void(0)"><button type="button" class="btn btn-primary hp-cater">VIEW CATERING MENU</button></a></p>
+      <p>Let us cater your gathering with a heap of deliciously prepared food!</p>
+			<p><a href="javascript:void(0)"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#orderCatering">Order Catering</button></a></p>
+			<!-- <p><a href="javascript:void(0)"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#requestFoodCart">Request the Food Cart</button></a></p> -->
 			<div class="banzo-catering">
 				<div id="banzo-menu">
 					<div class="row">
@@ -476,80 +284,76 @@ permalink: /
 
 				</div><!-- end Banzo menu -->
 			</div><!-- end Banzo catering -->
+      <!-- Order Catering Modal -->
+      <div class="modal fade" id="orderCatering" tabindex="-1" aria-labelledby="orderCateringLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="orderCateringLabel">Order Catering</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Tell us about your event! We'll take care of the rest.</p>
+        			<p>*No requests are confirmed until approval is received from our catering team. Please allow up to 2 business days for a response from our catering team. DO NOT submit duplicate requests via email or phone. If your event requires immediate confirmation, please skip this form and call (608) 441-2002. Thank you!</p>
 
-			<p>Tell us about your event! We'll take care of the rest.</p>
-			<p>*No requests are confirmed until approval is received from our catering team. Please allow up to 2 business days for a response from our catering team. DO NOT submit duplicate requests via email or phone. If your event requires immediate confirmation, please skip this form and call (608) 441-2002. Thank you!</p>
-
-			<div class="row">
-				<div class="col">
-					<form role="form" action="https://formspree.io/f/xnqlbbyr" method="POST">
-						<div class="row">
-							<div class="col-12 col-sm-6">
-								<div class="form-group">
-                  <input type="text" name="_gotcha" style="display:none" />
-									<label for="inputName">Your Name</label>
-									<input type="text" name="name" class="form-control" id="inputName">
-								</div>
-								<div class="form-group">
-									<label for="inputPhone">Phone Number</label>
-									<input type="tel" name="phone-number" class="form-control" id="inputPhone">
-								</div>
-								<div class="form-group">
-									<label for="inputDate">Event Date</label>
-				    			<input type="text" name="date" class="form-control" id="inputDate">
-								</div>
-							</div>
-							<div class="col-12 col-sm-6">
-								<div class="form-group">
-									<label for="inputTime">Event time</label>
-									<input type="text" name="time" class="form-control" id="inputTime">
-								</div>
-								<div class="form-group">
-									<label for="inputGuests">Number of guests</label>
-									<input type="text" name="guest-number" class="form-control" id="inputGuests">
-								</div>
-								<div class="form-group">
-									<label for="inputEmail">Your email</label>
-									<input type="email" name="email" class="form-control" id="inputEmail">
-								</div>
-							</div>
-						</div>
-						<div class="form-group">
-							<label for="requestedOrder">Requested Order</label>
-							<textarea type="text" name="requested-order" class="form-control" id="requestedOrder" rows="3" placeholder="Do you want a Banzo Bar, sampler platters, buffet, full dinner or apps..? What are you thinking?"></textarea>
-						</div>
-						<div class="form-group">
-							<label for="contact-message">Additional information</label>
-							<textarea type="text" name="aditional-info" class="form-control" id="contact-message" rows="3"></textarea>
-						</div>
-						<button type="submit" value="send" name="submit" class="btn btn-primary">Submit</button>
-					</form>
-				</div>
-			</div>
+        			<div class="row">
+        				<div class="col">
+        					<form id="cater" role="form" action="https://formspree.io/f/xnqlbbyr" method="POST">
+        						<div class="row">
+        							<div class="col-12 col-sm-6">
+        								<div class="form-group">
+                          <input type="text" name="_gotcha" style="display:none" />
+        									<label for="inputName">Your Name</label>
+        									<input type="text" name="name" class="form-control" id="inputName">
+        								</div>
+        								<div class="form-group">
+        									<label for="inputPhone">Phone Number</label>
+        									<input type="tel" name="phone-number" class="form-control" id="inputPhone">
+        								</div>
+        								<div class="form-group">
+        									<label for="inputDate">Event Date</label>
+        				    			<input type="text" name="date" class="form-control" id="inputDate">
+        								</div>
+        							</div>
+        							<div class="col-12 col-sm-6">
+        								<div class="form-group">
+        									<label for="inputTime">Event time</label>
+        									<input type="text" name="time" class="form-control" id="inputTime">
+        								</div>
+        								<div class="form-group">
+        									<label for="inputGuests">Number of guests</label>
+        									<input type="text" name="guest-number" class="form-control" id="inputGuests">
+        								</div>
+        								<div class="form-group">
+        									<label for="inputEmail">Your email</label>
+        									<input type="email" name="email" class="form-control" id="inputEmail">
+        								</div>
+        							</div>
+        						</div>
+        						<div class="form-group">
+        							<label for="requestedOrder">Requested Order</label>
+        							<textarea type="text" name="requested-order" class="form-control" id="requestedOrder" rows="3" placeholder="Do you want a Banzo Bar, sampler platters, buffet, full dinner or apps..? What are you thinking?"></textarea>
+        						</div>
+        						<div class="form-group">
+        							<label for="contact-message">Additional information</label>
+        							<textarea type="text" name="aditional-info" class="form-control" id="contact-message" rows="3"></textarea>
+        						</div>
+        					</form>
+        				</div>
+        			</div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <form>
+                <input value="cater" class="btn btn-primary" type="button" onclick="document.getElementById('cater').submit();"/>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
 		</div>
 	</div>
-
-	<!-- <div id="map" class="row">
-		<div class="col no-pad">
-			<div class="map-overlay" onClick="style.pointerEvents='none'"></div>
-			<style>
-			.map-overlay {
-				 background:transparent;
-				 position:absolute;
-				 width:100%;
-				 height:0; /* your iframe height */
-				 padding-bottom: 44.25%;
-				 z-index: 10;
-			}
-
-			.embed-container { position: relative; padding-bottom: 44.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute;border:none; top: 0; left: 0; width: 100%; height: 100%; }
-			@media (max-width: 767px) and (min-width:1px){
-				.embed-container { padding-bottom: 115%;}
-				.map-overlay { padding-bottom: 115%;}
-			}
-			</style>
-			<div class='embed-container'><iframe title="Delivery Zone" src="https://www.google.com/maps/d/embed?mid=1pgxOJlWKa02YGRAdfpftCxm_uj8&z=13" width="640" height="480"></iframe></div>
-		</div>
-	</div> -->
 
 </div><!-- end container-fluid -->
