--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ permalink: /
       <div class="p-4 white">
   			<h2 class="title">Catering</h2>
         <p>Let us cater your gathering with a heap of deliciously prepared food!</p>
-  			<p><a href="javascript:void(0)"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#orderCatering">Order Catering</button></a></p>
+  			<p><a href="javascript:void(0)"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#orderCatering">Request Catering</button></a></p>
   			<!-- <p><a href="javascript:void(0)"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#requestFoodCart">Request the Food Cart</button></a></p> -->
 			  <div class="banzo-catering">
   				<div id="banzo-menu">
