added new form button

--- a/index.html
+++ b/index.html
@@ -137,8 +137,10 @@ permalink: /
       <div class="p-4 white">
   			<h2 class="title">Catering</h2>
         <p>Let us cater your gathering with a heap of deliciously prepared food!</p>
-  			<p><a href="javascript:void(0)"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#orderCatering">Request Catering</button></a></p>
-  			<!-- <p><a href="javascript:void(0)"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#foodCartCatering">Request the Food Cart</button></a></p> -->
+  			<div class="mb-3">
+          <a class="mr-3" href="javascript:void(0)"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#orderCatering">Request Catering</button></a>
+  			  <a href="javascript:void(0)"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#foodCartCatering">Request the Food Cart</button></a>
+        </div>
 			  <div class="banzo-catering">
   				<div id="banzo-menu">
   					<div class="row">
