--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@ permalink: /
 <div class="container-fluid bg-warning covid19">
   <div class="container">
     <div class="row p-3">
-    	<h2>We are <u>OPEN</u> for contactless delivery and pickup: Tue - Sun 11am - 8pm</h2>
+      <div class="col-12 text-center">
+      <h2>OPEN Tue-Sun 11am-8pm</h2>
+      <h5>Indoor dining will resume in January 2022… stay tuned!</h5></div>
     </div>
   </div>
 </div>
@@ -63,27 +65,23 @@ permalink: /
             <div class="col-12">
               <h2 class="title">Order Online</h2>
   						<p>Don't get up.<br>Make an order while sitting right where you are.</p>
-            </div>
-            <div class="col-6">
-              <h3>Restaurant</h3>
-              <p>Tuesday - Sunday 11am - 8pm</p>
               <a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank">
                 <button type="button" class="btn-primary btn mb-3">Order from Restaurant</button>
               </a>
             </div>
-            <div class="col-6">
-              <h3>Food Cart</h3>
-              <h5>@ Karben4</h5>
-              <p>Fridays 5pm - 8pm</p>
-              <a href="https://www.toasttab.com/banzo-food-cart-2105-sherman-ave/v3" target="_blank">
-                <button type="button" class="btn-dark btn mb-3" disabled>Temporarily Unavailable</button>
-              </a>
+            <div class="col-md-6 col-12">
+              <h3>Restaurant Hours</h3>
+              <p class="hours"><strong>Sunday</strong> <span>11am - 8pm</span></p>
+              <p class="hours"><strong>Monday</strong> <span><em>closed</em></span></p>
+              <p class="hours"><strong>Tuesday</strong> <span>11am - 8pm</span></p>
+              <p class="hours"><strong>Wednesday</strong> <span>11am - 8pm</span></p>
+              <p class="hours"><strong>Thursday</strong> <span>11am - 8pm</span></p>
+              <p class="hours"><strong>Friday</strong> <span>11am - 8pm</span></p>
+              <p class="hours"><strong>Saturday</strong> <span>11am - 8pm</span></p>
             </div>
-					</div>
-					<div class="row">
-						<div class="col">
-							<h2 class="title">Contact</h2>
-							<p>2105 Sherman Ave<br>Madison, WI 53704</p>
+            <div class="col-md-6 col-12">
+              <h3>Contact Us</h3>
+              <p>2105 Sherman Ave<br>Madison, WI 53704</p>
 							<p><i class="fas fa-phone"></i> <tel>(608) 441-2002</tel></p>
 							<a href="https://www.facebook.com/banzomadison/" target="_blank">
 								<span class="sr-only">Facebook</span><i class="fab fa-facebook-f"></i>
@@ -94,7 +92,7 @@ permalink: /
 							<a href="https://www.instagram.com/banzomadison/" target="_blank">
 								<span class="sr-only">Instagram</span><i class="fab fa-instagram"></i>
 							</a>
-						</div>
+            </div>
 					</div>
 				</div>
 			</div>
