--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ permalink: /
     <div class="row p-3">
       <div class="col-12 text-center">
       <h2>OPEN Tue-Sun 11am-8pm</h2>
-      <h5>Indoor dining will resume in January 2022… stay tuned!</h5></div>
+      <h5>Indoor dining room now open!</h5></div>
     </div>
   </div>
 </div>
