--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ permalink: /
   <div class="container">
     <div class="row p-3">
       <div class="col-12 text-center">
-      <h2>OPEN Tue-Sun 11am-8pm</h2>
+      <h2>OPEN Tue-Sat 11am-8pm (Closed Sunday - Monday)</h2>
       <h5>Indoor dining room now open!</h5></div>
     </div>
   </div>
@@ -26,7 +26,7 @@ permalink: /
               <img class="default-img" alt="Order from Restaurant" src="/images/order.png" width="100%" style="max-width: 210px;">
               <img class="hover-img" alt="Order from Restaurant" src="/images/order-restaurant.png" width="100%" style="max-width: 210px;">
               <h2>Order from Restaurant</h2>
-              <p>Tue-Sun 11am - 8pm</p>
+              <p>Tue-Sat 11am - 8pm</p>
             </a>
 					</li>
 					<!-- <li class="text-center hp-cart">
@@ -71,7 +71,7 @@ permalink: /
             </div>
             <div class="col-md-6 col-12">
               <h3>Restaurant Hours</h3>
-              <p class="hours"><strong>Sunday</strong> <span>11am - 8pm</span></p>
+              <p class="hours"><strong>Sunday</strong> <span><em>closed</em></span></p>
               <p class="hours"><strong>Monday</strong> <span><em>closed</em></span></p>
               <p class="hours"><strong>Tuesday</strong> <span>11am - 8pm</span></p>
               <p class="hours"><strong>Wednesday</strong> <span>11am - 8pm</span></p>
